--- a/src/routes/homePage/index.module.css
+++ b/src/routes/homePage/index.module.css
@@ -3,7 +3,7 @@
     background-size: cover;
     position: relative;
     z-index: 1;
-    background-image: url("../../assets/header-bg.jpg");
+    background-image: url("../../assets/mainbgVALO.png");
     height: 100vh;
     height: var(--doc-height);
     display: flex;
@@ -20,7 +20,7 @@
     bottom: 0;
     width: 52%;
     clip-path: polygon(0 0, 0 100%, 100% 100%);
-    background-color: #08CDFF;
+    background-color: #f94555;
     height: 50px;
 }
 
@@ -58,11 +58,36 @@
         opacity: 1;
     }
 }
+.parallaX{
+    z-index: -1;
+    padding-top: 400px;
+    position: absolute;
+    /* width: fit-content;
+    height: fit-content; */
+    filter:blur(2px) opacity(60%);
+
+}
+.parallaX1{
+    z-index: -1;
+    padding-top: 400px;
+    position: absolute;
+    scale: 70%;
+    /* display: none; */
+    
+    /* z-index: -1;
+    padding-top: 100px;
+    padding-right: 900px;
+    position: absolute;
+    scale: 120%; */
+   
+    /* filter:blur(2px) opacity(60%); */
+
+}
 
 .lottieAnim {
     width: 35vw;
     max-width: 40rem;
-    margin-top: 2rem;
+    margin-top: 5rem;
     opacity: 0;
 }
 
@@ -72,11 +97,13 @@
     }
 }
 
+
 .date {
     font-size: 2rem;
+    font-family: 'Valorant';
     font-weight: bold;
-    margin-top: 2rem;
-    text-shadow: 0 1px 0 #0083a4, 0 2px 0 #0083a4, 0 3px 0 #0083a4, 0 4px 0 #0083a4;
+    margin-top: 5rem;
+    text-shadow: 0 1px 0 #a40000, 0 2px 0 #a40000, 0 3px 0 #a40000, 0 4px 0 #a40000;
     margin-bottom: 0.2rem;
     opacity: 0;
 }
@@ -90,7 +117,7 @@
 
 .svgicon {
     fill: #132533;
-    stroke: #08CDFF;
+    stroke: #ff0808;
     position: absolute;
     left: 0;
     top: 0;
@@ -146,7 +173,7 @@
 }
 
 .headerDesc {
-    font-family: 'Barlow';
+    font-family: 'Valorant';
     letter-spacing: 0;
     max-width: 30rem;
     text-align: center;
@@ -171,7 +198,7 @@
 }
 
 .sponsorsScrollWrap {
-    background: #0b0e13;
+    background: #130b0b;
     height: 20rem;
     display: flex;
     align-items: center;
@@ -193,9 +220,9 @@
 .sScrollCard {
     height: 6rem;
     min-width: 10rem;
-    background-image: -webkit-linear-gradient(90deg, #0c0e12 0%, rgba(4, 67, 88, 0.5) 100%);
+    background-image: -webkit-linear-gradient(90deg, #120c0c 0%, rgba(88, 4, 4, 0.5) 100%);
     border-radius: 8px;
-    border: 1px solid rgba(1, 201, 252, 0.3);
+    border: 1px solid rgba(252, 1, 1, 0.3);
     padding: 0.5rem 1.5rem;
 }
 
@@ -214,18 +241,19 @@
     flex-direction: column;
     background-position: center;
     background-size: cover;
-    background-image: url("../../assets/rewards-bg.jpg");
+    background-image: url("../../assets/static-bg-prizes.png");
     height: 100vh;
 }
 
 .headerText {
+    font-family: Valorant;
     text-align: center;
     margin-top: 5rem;
     margin-bottom: 2.5rem;
 }
 
 .headerText>div:nth-of-type(1) {
-    color: #08CDFF;
+    color: #f94555;
     font-family: 'Barlow';
     letter-spacing: 0.1rem;
     font-weight: bold;
@@ -236,7 +264,7 @@
 .headerText>div:nth-of-type(2) {
     font-size: 3rem;
     font-weight: bold;
-    text-shadow: 0 1px 0 #0083a4, 0 2px 0 #0083a4, 0 3px 0 #0083a4, 0 4px 0 #0083a4;
+    text-shadow: 0 1px 0 #a40000, 0 2px 0 #a40000, 0 3px 0 #a40000, 0 4px 0 #a40000;
     opacity: 0;
 }
 
@@ -266,7 +294,7 @@
     align-items: center;
     justify-content: center;
     text-transform: uppercase;
-    border: 2px solid #08CDFF;
+    border: 2px solid #f94555;
     white-space: nowrap;
     font-size: 15px;
     padding: 14px 35px;
@@ -280,8 +308,8 @@
 }
 
 .decoratedBtn:hover {
-    background: #08CDFF;
-    color: #201f2a;
+    background: #f94555;
+    color: #2a1f1f;
 }
 
 .decoratedBtn::before,
@@ -295,6 +323,8 @@
     width: 15px;
     height: 51px;
     pointer-events: none;
+    filter:   hue-rotate(180deg) brightness(70%)  contrast(150%);
+
 }
 
 .decoratedBtn::after {
@@ -337,7 +367,7 @@
     top: 0;
     width: 100%;
     height: 1px;
-    background: linear-gradient(90deg, transparent 0%, #08CDFF 50%, transparent 100%);
+    background: linear-gradient(90deg, transparent 0%, #f94555 50%, transparent 100%);
 }
 
 .prizesTab::after {
