Revert "git push"
This reverts commit 28f011ca900c88ee29ae76f1ebe15bdaed61138b.

--- a/src/components/navbar/index.module.css
+++ b/src/components/navbar/index.module.css
@@ -63,8 +63,7 @@
 
 .navLink:hover,
 .navLink.activePath {
-    /* color: #08cdff; */
-    color: #f20c42; 
+    color: #08cdff;
 }
 
 .navLink:hover::before,
@@ -92,7 +91,7 @@
 
 .svgicon {
     fill: #0f1d29;
-    stroke: #f20c42;
+    stroke: #08CDFF;
     position: absolute;
     left: 0;
     top: 0;
